--- a/index.html
+++ b/index.html
@@ -44,13 +44,9 @@
                     <h2 class="content-section-title"> About Me </h2>
                     <div class="content-section-text">
 
-                        <p> “Holy Sonnets: Death be not proud” (1633) by John
-                            Donne
-                            (Theme: Death is actually a slave to the human race
-                            and
-                            has no power over our souls and instead frees our
-                            soul
-                            to heaven)
+                        <p> Hey! I am currently a grade 12 students at Bishop Reding CSS. I am very passionate about programming however apart from coding I also 
+                            enjoy playing soccer/cricket, leading my platoon in cadets, competitive esports and finally debate. As per my experince, I have been 
+                            involved with my schools FRC team and am activley particpating in hackathons to build my programming skills. 
                         </p>
 
                         <p>
