--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@
                         </p>
 
                         <p>
-                            “Holy Sonnets: Death be not proud” (1633) by John
-                            Donne
-                            (Theme: Death is actually a slave to the human race
-                            and
-                            has no power over our souls and instead frees our
-                            soul
-                            to heaven)
+                            My future aspirations revolve around either working for a reputable company as a software engineer or seeking an enterinpuel ventrue 
+                            to start a company that builds/creates techincal 'gadgets' to solve real-world problems, similar to my favourite tv show character, 
+                            Doremon. I hope to achive this by employment oppurtuines, online/university courses to help ehance my programming skills, and taking 
+                            part in hackathons to apply my knowledge. 
                         </p>
 
                         <a href="assests/resume.pdf.pdf"> <button
