--- a/index.html
+++ b/index.html
@@ -148,29 +148,15 @@
                     <h2> Contact Me </h2>
                     <div>
 
-                        <p> “Holy Sonnets: Death be not proud” (1633) by
-                            John
-                            Donne
-                            (Theme: Death is actually a slave to the human
-                            race
-                            and
-                            has no power over our souls and instead frees
-                            our
-                            soul
-                            to heaven)
+                        <p> ishmittal12@gmail.com 
+                            647-804-2505
                         </p>
 
                         <p>
-                            “Holy Sonnets: Death be not proud” (1633) by
-                            John
-                            Donne
-                            (Theme: Death is actually a slave to the human
-                            race
-                            and
-                            has no power over our souls and instead frees
-                            our
-                            soul
-                            to heaven)
+                            Instagram: 
+                            Linkedin: 
+                            X: 
+                            Youtube: 
                         </p>
                     </div>
                 </div>
