--- a/index.html
+++ b/index.html
@@ -76,7 +76,26 @@
                         </div>
 
                         <div class="project-text-container">
-                            <h3 class="project-title"> Project name </h3>
+                            <h3 class="project-title"> Smart Vault </h3>
+                            <div class="content-section-text"> <p> Library application that is able to simulate a library and allows the user to use features 
+                                such as siging out a book through scanning and manually entering an ISBN as well as returning the book to the required time it 
+                                should be returned by. 
+                                </p></div>
+                            <a href> <button class="generic-button"> View
+                                    Project
+                                </button> </a>
+                        </div>
+                    </div>
+
+                    <div class="project-item">
+                        <div class="project-image-container">
+                            <img class="project-image-thumbnail"
+                                src="/assests/project1.png"/>
+
+                        </div>
+
+                        <div class="project-text-container">
+                            <h3 class="project-title"> Z-Bank </h3>
                             <div class="content-section-text"> <p> SOME PROJECT
                                     CONTENT
                                 </p></div>
@@ -94,25 +113,7 @@
                         </div>
 
                         <div class="project-text-container">
-                            <h3 class="project-title"> Project name </h3>
-                            <div class="content-section-text"> <p> SOME PROJECT
-                                    CONTENT
-                                </p></div>
-                            <a href> <button class="generic-button"> View
-                                    Project
-                                </button> </a>
-                        </div>
-                    </div>
-
-                    <div class="project-item">
-                        <div class="project-image-container">
-                            <img class="project-image-thumbnail"
-                                src="/assests/project1.png"/>
-
-                        </div>
-
-                        <div class="project-text-container">
-                            <h3 class="project-title"> Project name </h3>
+                            <h3 class="project-title"> Greenify </h3>
                             <div class="content-section-text"> <p> SOME PROJECT
                                     CONTENT
                                 </p></div>
