--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
 
                         <div class="project-text-container">
                             <h3 class="project-title"> Z-Bank </h3>
-                            <div class="content-section-text"> <p> SOME PROJECT
-                                    CONTENT
+                            <div class="content-section-text"> <p> Simulates a banking application that is able to perform simple tasks
+                                such as depositing money and checking out money. The program also allows the user to send money to other 
+                                accoutns registerd within the system. Finally, the application also has rewarding aspects such as the stock 
+                                market simulation game aswell as voucher obtained based on time spent using the application. 
                                 </p></div>
                             <a href> <button class="generic-button"> View
                                     Project
