--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 such as siging out a book through scanning and manually entering an ISBN as well as returning the book to the required time it 
                                 should be returned by. 
                                 </p></div>
-                            <a href> <button class="generic-button"> View
+                            <a href = "https://github.com/MathGamer2012/SmartVault"> <button class="generic-button"> View
                                     Project
                                 </button> </a>
                         </div>
@@ -101,7 +101,7 @@
                                 accoutns registerd within the system. Finally, the application also has rewarding aspects such as the stock 
                                 market simulation game aswell as voucher obtained based on time spent using the application. 
                                 </p></div>
-                            <a href> <button class="generic-button"> View
+                            <a href = "https://github.com/MathGamer2012/Island-Boi"> <button class="generic-button"> View
                                     Project
                                 </button> </a>
                         </div>
