--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
 
                         <div class="project-text-container">
                             <h3 class="project-title"> Greenify </h3>
-                            <div class="content-section-text"> <p> SOME PROJECT
-                                    CONTENT
+                            <div class="content-section-text"> <p> Waste management application that allows users to scan their meals to distinguish 
+                                food items that contribute to waste and food items that do not. Based on the scan, the app also informs the user how 
+                                they can reduce their waste. 3rd Place Hack49 Winner project.
                                 </p></div>
-                            <a href> <button class="generic-button"> View
+                            <a href = "https://github.com/Sage1134/Greenify"> <button class="generic-button"> View
                                     Project
                                 </button> </a>
                         </div>
