--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <h3 class="project-title"> Smart Vault </h3>
                             <div class="content-section-text"> <p> Library application that is able to simulate a library and allows the user to use features 
                                 such as siging out a book through scanning and manually entering an ISBN as well as returning the book to the required time it 
-                                should be returned by. 
+                                should be returned by. Also includes a search feature to find books registered in the system. 
                                 </p></div>
                             <a href = "https://github.com/MathGamer2012/SmartVault"> <button class="generic-button"> View
                                     Project
