--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
                         </div>
 
                         <div class="project-text-container">
-                            <h3 class="project-title"> Project name </h3>
-                            <div class="content-section-text"> <p> SOME PROJECT
-                                    CONTENT
+                            <h3 class="project-title"> First Robotics Competition Robot </h3>
+                            <div class="content-section-text"> <p>  Collaborated with a team to program the FRC robot for the compeditions. 
+                                Key features of the robots included teleop (robot moves based on human input), autonmous (robot moves based on code), 
+                                and vision (photonvision, lasercan). 
+                                
                                 </p></div>
                             <a href> <button class="generic-button"> View
                                     Project
