--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 and vision (photonvision, lasercan). 
                                 
                                 </p></div>
-                            <a href> <button class="generic-button"> View
+                            <a href = "https://github.com/team9562/2025"> <button class="generic-button"> View
                                     Project
                                 </button> </a>
                         </div>
