--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </div>
 
                         <div class="project-text-container">
-                            <h3 class="project-title"> First Robotics Competition Robot </h3>
+                            <h3 class="project-title"> FRC Robot </h3>
                             <div class="content-section-text"> <p>  Collaborated with a team to program the FRC robot for the compeditions. 
                                 Key features of the robots included teleop (robot moves based on human input), autonmous (robot moves based on code), 
                                 and vision (photonvision, lasercan). 
