--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </div>
 
                         <div class="project-text-container">
-                            <h3 class="project-title"> Z-Bank </h3>
+                            <h3 class="project-title"> Smart Vault </h3>
                             <div class="content-section-text"> <p> Banking application that allows the user create an account in which they can deposit, checkout, and transfer 
                                 money to other accounts. Also includes additional features such as a stock market simulation game, vouchers thay can be scanned, and a facial 
                                 recognition system. 
