--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </div>
 
                         <div class="project-text-container">
-                            <h3 class="project-title"> Smart Vault </h3>
+                            <h3 class="project-title"> Book Vault </h3>
                             <div class="content-section-text"> <p> Library application that is able to simulate a library and allows the user to use features 
                                 such as siging out a book through scanning and manually entering an ISBN as well as returning the book to the required time it 
                                 should be returned by. Also includes a search feature to find books registered in the system. 
