--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 such as siging out a book through scanning and manually entering an ISBN as well as returning the book to the required time it 
                                 should be returned by. Also includes a search feature to find books registered in the system. 
                                 </p></div>
-                            <a href = "https://github.com/MathGamer2012/SmartVault"> <button class="generic-button"> View
+                            <a href = "https://github.com/MathGamer2012/Island-Boi"> <button class="generic-button"> View
                                     Project
                                 </button> </a>
                         </div>
@@ -103,7 +103,7 @@
                                 
                                 
                                 </p></div>
-                            <a href = "https://github.com/MathGamer2012/Island-Boi"> <button class="generic-button"> View
+                            <a href = "https://github.com/MathGamer2012/SmartVault"> <button class="generic-button"> View
                                     Project
                                 </button> </a>
                         </div>
@@ -112,7 +112,7 @@
                     <div class="project-item">
                         <div class="project-image-container">
                             <img class="project-image-thumbnail"
-                                src="/assests/project1.png"/>
+                                src="/assests/logoBGV2.png"/>
 
                         </div>
 
