Fixed issue with the image of the second project

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="project-item">
                         <div class="project-image-container">
                             <img class="project-image-thumbnail"
-                                src="/assests/project1.png"/>
+                                src="/assests/logoBGV2.png"/>
 
                         </div>
 
